<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bacckground"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/lblAddEntryHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:editable="false"
            android:text="@string/lblAddEntryHint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTitleEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTitleEntry" />

            <EditText
                android:id="@+id/txtEntryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTitleAddEntry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblDescriptionEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDescriptionEntry" />

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight=".25"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hintDescriptionEntry"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".60"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblEntryRelevance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblEntryRelevance" />

            <Spinner
                android:id="@+id/selImportance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="validate_entry_fields"
                android:text="@string/general_save" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelAddEntries"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
